# gradi-prediction

./: .gitignore  README.md  pyproject.toml
config/: audio.yml  keywords.yml  keywords_en.yml  keywords_ko.yml  scenarios_en.yml  scenarios_ko.yml  topics_en.yml  topics_ko.yml
firmware/esp-daf/: en_prompt_aifuture.h  en_prompt_brag.h  en_prompt_politics.h  esp-daf.ino  kr_prompt_brag.h  kr_prompt_politics.h
scripts/: gen_prompt_header.py  semantic_eval.py
src/: audio_io.py  daf_ring.py  detector_keywords.py  detector_semantic.py  device_detector.py  esp32_serial_audio.py  main.py  predictor_llamacpp.py  state.py  utils.py  vad_webrtc.py
src/gradi_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
